--- a/index.html
+++ b/index.html
@@ -17,43 +17,47 @@ function ajax_post(){
     hr.onreadystatechange = function() {
 	    if(hr.readyState == 4 && hr.status == 200) {
 		    var return_data = hr.responseText;
-          var result = [];
-          console.log(result);
-            var result2 = [];
-          result2 = JSON.parse(result);
-
-
-        var phpdata = [];
-        phpdata = return_data.split(',');
+        phpdata = JSON.parse(return_data);
         console.log(phpdata);
-        console.log("***endphpdata*****");
-        var dlzka = Math.floor(phpdata.length/3)-1;
+        var vT = phpdata[0];
+        var xT = phpdata[1];
+        var yT = phpdata[2];
+
+
+
+
+
+
+
+/*
+      //  var dlzka = Math.floor(phpdata.length/3)-1;
+        var dlzka = (phpdata.length);
         var dlzka2 = dlzka + dlzka;
         var dlzka3 = dlzka2 + dlzka;
-        console.log(phpdata);
-        //console.log(dlzka2);
-        //console.log(dlzka3);
+        console.log(dlzka);
+          console.log("========dlzka==============");
+        console.log(dlzka2);
+          console.log("=========dlzka2==============");
+        console.log(dlzka3);
+          console.log("==========dlzka3===========");
 
         var jst = [];
-        for(var it = 1; it <= dlzka; it++){
+        for(var it = 0; it <= dlzka; it++){
           jst[it] = phpdata[it];
-          //console.log(jst[it]);
+          console.log(jst[it]);
         }
-        //alert(jst);
-        console.log("========================");
+        console.log("=========jst=============");
+
+
         var jsx = [];
-        for(var ix = dlzka+2; ix <= dlzka2; ix++){
+        for(var ix = dlzka; ix <= dlzka2; ix++){
           //console.log(ix);
           jsx[ix] = phpdata[ix];
-          //console.log(jsx[ix]);
+          console.log(jsx[ix]);
         }
-        //alert(jsx);
+        console.log("=========jsx=============");
 
-
-
-        //alert(ar.length);
-        //parseFloat(ar[i].replace(/,/g,""));
-
+*/
 
 
 			document.getElementById("status").innerHTML = return_data;
