--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ function createTable(tableData) {
    });
    tableBody.appendChild(row);
  });
+
  table.appendChild(tableBody);
  document.body.appendChild(table);
 }
@@ -43,7 +44,8 @@ function createTable(tableData) {
 
 
 			document.getElementById("status").innerHTML = return_data;
-      document.getElementById("T").innerHTML = createTable([vT],[xT]);
+      document.getElementById("T").innerHTML = createTable([[vT],[xT],[yT]]);
+      //createTable([["row 1, cell 1", "row 1, cell 2"], ["row 2, cell 1", "row 2, cell 2"]]);
 	    }
     }
     // Send the data to PHP now... and wait for response to update the status div
