proba kiiratas tombokre

--- a/index.html
+++ b/index.html
@@ -23,29 +23,15 @@ function ajax_post(){
         var xT = phpdata[1];
         var yT = phpdata[2];
 
-// CREATE TABLE------------------------------------
-function createTable(tableData) {
-  var table = document.createElement('table');
-  var tableBody = document.createElement('tbody');
- tableData.forEach(function(rowData) {
-   var row = document.createElement('tr');
-   rowData.forEach(function(cellData) {
-    var cell = document.createElement('td');
-    cell.appendChild(document.createTextNode(cellData));
-    row.appendChild(cell);
-   });
-   tableBody.appendChild(row);
- });
-
- table.appendChild(tableBody);
- document.body.appendChild(table);
-}
-// CREATE TABLE------------------------------------
 
 
 			document.getElementById("status").innerHTML = return_data;
-      document.getElementById("T").innerHTML = createTable([[vT],[xT],[yT]]);
-      //createTable([["row 1, cell 1", "row 1, cell 2"], ["row 2, cell 1", "row 2, cell 2"]]);
+      document.getElementById("header").innerHTML = "cas  \u00A0 \u00A0 \u00A0 \u00A0  poz x  \u00A0 \u00A0 \u00A0 \u00A0   \u00A0 \u00A0 \u00A0 \u00A0        poz  y ";
+      //**********************************************************************************************************itt iratom ki a tomboket
+      document.getElementById("zobrazT").innerHTML = vT;
+      document.getElementById("zobrazX").innerHTML = xT;
+      document.getElementById("zobrazY").innerHTML = yT;
+    //  document.getElementById("zobrazY").innerHTML = yT.join('<br/>');
 	    }
     }
     // Send the data to PHP now... and wait for response to update the status div
@@ -62,7 +48,10 @@ Velocity: <input id="Velocity" name="Velocity" type="text">  <br><br>
 Angle: <input id="Angle" name="Angle" type="text"> <br><br>
 <input name="myBtn" type="submit" value="Submit Data" onclick="ajax_post();"> <br><br>
 <div id="status"></div>
-<div id="T"></div>
+<div id="header"></div>
+<div id="zobrazT"></div>
+<div id="zobrazX"></div>
+<div id="zobrazY"></div>
 
 
 </body>
