--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ var indexEnd = xT.length;
 */
 var energy = phpdata.join();
 
-console.log(energy);
+
 
 
 var akt = 0;
@@ -112,8 +112,8 @@ vT += '<\/tr><\/table>';
 
 
     document.getElementById("zobrazT").innerHTML = vT;
-    document.getElementById("zobrazX").innerHTML = xT;
-    document.getElementById("zobrazY").innerHTML = yT;
+  //  document.getElementById("zobrazX").innerHTML = xT;
+ //    document.getElementById("zobrazY").innerHTML = yT;
 
 
 
